# freedomdrone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.en.md  README.md  ReadMe  StringUtils.hpp  drone.cpp  drone.hpp  freedomdrone.cpp  freedomdrone.h  main.cpp
algorithm/: breadth_first_search.cpp  breadth_first_search.hpp  free_KDTree.hpp  free_data.hpp  free_graph.hpp  free_point.hpp  free_polygon.cpp  free_polygon.hpp  free_utils.hpp  qt_free_polygon.cpp  qt_free_polygon.hpp  search_algorithm.cpp  search_algorithm.hpp
connection/: MavSocket.cpp  MavSocket.hpp  MavUtils.hpp  MavlinkConnection.cpp  MavlinkConnection.hpp  MessageTypes.cpp  MessageTypes.hpp  mavlink_connection.cpp  mavlink_connection.hpp  mavlink_socket.cpp  mavlink_socket.hpp  mavlink_utils.hpp  message_types.cpp  message_types.hpp
controls/: NonlinearController.cpp  NonlinearController.hpp  inner_controller.hpp  nonlinear_controller.cpp  nonlinear_controller.hpp  outer_controller.hpp
controls/crazyflie/: InnerLoopController.hpp  OuterLoopController.hpp  inner_controller_crazyflie.hpp  outer_controller_crazyflie.hpp
data/: colliders.csv
data/traj/: CircleNoFF.txt  MakeCircleTrajectory.py  MakeSpiralTrajectory.py  SpiralNoFF.txt  line_traj.txt
drone/: BackyardFlyer.cpp  BackyardFlyer.hpp  ControlsFlyer.cpp  ControlsFlyer.hpp  Drone.cpp  Drone.hpp  MotionPlanning.cpp  MotionPlanning.hpp  Trajectory.cpp  Trajectory.h  UnityDrone.cpp  UnityDrone.hpp  UpAndDownFlyer.cpp  UpAndDownFlyer.hpp  backyard_flyer.cpp  backyard_flyer.hpp  common_flyer.hpp  drone.cpp  drone.hpp  motion_planning_flyer.cpp  motion_planning_flyer.hpp  nonlinear_controller_flyer.cpp  nonlinear_controller_flyer.hpp  unity_drone.cpp  unity_drone.hpp  up_and_down_flyer.cpp  up_and_down_flyer.hpp
drone/crazyflie/: AttitudeFlyer.cpp  AttitudeFlyer.hpp  TrajectoryVelocityFlyer.cpp  TrajectoryVelocityFlyer.hpp  VelocityFlyer.cpp  VelocityFlyer.hpp  attitude_flyer_crazyflie.cpp  attitude_flyer_crazyflie.hpp  trajectory_velocity_flyer_crazyflie.cpp  trajectory_velocity_flyer_crazyflie.hpp  velocity_flyer_crazyflie.cpp  velocity_flyer_crazyflie.hpp
estimator/: BaseQuadEstimator.cpp  BaseQuadEstimator.hpp
estimator/ekf/: QuadEstimatorEKF.cpp  QuadEstimatorEKF.hpp
lib/matplotlib-cpp/: matplotlibcpp.h
lib/mavlink/: msgmap.hpp
lib/mavlink/ardupilotmega/: ardupilotmega.hpp  version.h
lib/mavlink/common/: common.h  common.hpp  gtestsuite.hpp  version.h
lib/mavlink/icarous/: version.h
lib/mavlink/uAvionix/: version.h
math/: Mat3x3F.hpp  Quaternion.cpp  Quaternion.hpp  matrix3x3f.hpp
messaging/: MessageIDs.hpp  message_ids.hpp
planning/: DroneUtils.hpp  FreeData.hpp  FreeGraph.hpp  KDTree.hpp  Point.hpp  QTFreePolygon.hpp  SearchAlgorithm.cpp  SearchAlgorithm.hpp  free_data.hpp  free_point.cpp  free_point.hpp  free_utils.hpp  search_algorithm.cpp  search_algorithm.hpp
python/: breadth_first_search.py  geodetic_to_ned.py
python/home/: A-Star-Solution.ipynb  A-Star.ipynb  BFS.ipynb
python/jupyter notebook/2DGaussian/: 2D-Gaussian-Solution.ipynb  2D-Gaussian.ipynb
python/jupyter notebook/3DDrone/: Lesson 4 - 3D Drone-Full-Notebook.ipynb
python/jupyter notebook/3DMotionPlanning/: motion_planning.py  planning_utils.py  sampling.py  writeup.md
python/jupyter notebook/A-Star/: A-Star-Solution.ipynb
python/jupyter notebook/A-Start-City/: A-Star-City.ipynb  a_star_city.py  planning.py
python/jupyter notebook/AttitudeEstimation/: Attitude estimation-Solution-Revised.ipynb  Attitude estimation-Student-Revised.ipynb
python/jupyter notebook/BarometerAndGPSIntegration/: Barometer and GPS Integration - Solution.ipynb  Barometer and GPS Integration - Student.ipynb
python/jupyter notebook/Bresenham/: Bresenham-Solution.ipynb  Bresenham.ipynb  bresenham_custom.py  bresenham_std.py
python/jupyter notebook/CoaxialDroneDynamics/: 1. Coaxial Drone Dynamics.ipynb  2. Advance State for Controlled Drone SOLUTION.ipynb  2. Advance State for Controlled Drone.ipynb  3. Uncontrolled 2D Drone.ipynb  4. Calculating Accelerations in 2D.ipynb  5. Controlling a 2D Quad.ipynb
python/jupyter notebook/Collinearity/: Collinearity.ipynb  collinearity.py
python/jupyter notebook/ComparingTarjectories/: Linear Controller Solution.ipynb  Linear Controller.ipynb  Non-Linear Controller Solution.ipynb
python/jupyter notebook/ConfigurationSpace/: Configuration-Space.ipynb  configuration_space.py
python/jupyter notebook/Controls/: controls_flyer.py
python/jupyter notebook/DeadReckoning3D/: Dead_Reckoning_3D-Solution.ipynb  Dead_Reckoning_3D-Student.ipynb
python/jupyter notebook/DroneIn3D/: Drone_in_3D-Solution.ipynb
python/jupyter notebook/DubinsCar/: Dubins-Car.ipynb
python/jupyter notebook/EKF/: EKF-Student.ipynb
python/jupyter notebook/EKFPredict/: EKF-Solution.ipynb
python/jupyter notebook/EulerRotations/: Rotations-Solution.ipynb
python/jupyter notebook/FeatureTracker/: Feature-Tracker.ipynb
python/jupyter notebook/GeodeticToNED/: Geodetic to NED.ipynb  Geodetic to NED_solution.ipynb
python/jupyter notebook/GraphSearch/: Graph-Search-Solution.ipynb  Graph-Search.ipynb
python/jupyter notebook/GyroscpoeMeasurement/: Gyroscope_Measurements-Student.ipynb
python/jupyter notebook/IMUCalibration/: Calibration_in_3D-Solution.ipynb  Calibration_in_3D-Student.ipynb
python/jupyter notebook/KalmanFilter/: Kalman_Filter-Student.ipynb
python/jupyter notebook/LeastSquares/: Least-Squares.ipynb
python/jupyter notebook/LinearizationExploration/: Comparing Trajectories.ipynb  Linearization.ipynb  Non-Linear Controller.ipynb
python/jupyter notebook/MagnetometerCalibration/: Magnetometer_calibration-Student.ipynb
python/jupyter notebook/MedialAxis/: Medial-Axis-Solution.ipynb  Medial-Axis.ipynb  Medial-Axis.py  planning.py
python/jupyter notebook/ModelingDynamics/: Dynamics-Model.py
python/jupyter notebook/NonLinearLeastSquares/: Non-Linear-Least-Squares.ipynb
python/jupyter notebook/NumericalEstimation/: Numerical-Estimation.ipynb
python/jupyter notebook/OpticalFlow/: Optical-Flow.ipynb
python/pyfunc/: hello.py
(+58 files in other folders)
